[tool.poetry]
name = "locust-load-testing"
version = "0.1.1"
description = ""
authors = ["Ihar Suvorau <ihar.suvorau@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
locust = "^2.15.0"
pandas = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
