[tool.poetry]
name = "locust-load-testing"
version = "0.2.1"
description = ""
authors = ["Ihar Suvorau <ihar.suvorau@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
locust = "^2.15.0"
pandas = "^1.5.3"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
